--- a/backend/news_crew/pyproject.toml
+++ b/backend/news_crew/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10,<3.14"
 dependencies = [
     "chromadb>=0.5.23",
     "crewai[tools]>=0.159.0,<1.0.0",
+    "fastapi>=0.116.1",
     "google-generativeai>=0.8.5",
     "hyperbrowser>=0.55.0",
     "nltk>=3.9.1",
@@ -15,6 +16,7 @@ dependencies = [
     "selenium>=4.35.0",
     "sentence-transformers>=5.1.0",
     "trafilatura>=2.0.0",
+    "uvicorn>=0.35.0",
     "webdriver-manager>=4.0.2",
 ]
 
